# quick_maths

./: CMakeLists.txt  README.md
include/: cmp_macros.hpp  fraction.hpp  line_eq.hpp  point.hpp
src/: line_eq.cpp  triangles.cpp
